--- a/Clon-Pinterest/index.html
+++ b/Clon-Pinterest/index.html
@@ -9,24 +9,24 @@
       <a href="https://www.pinterest.com" id="pinterest-icon">
         <img src="pinterest-icono.png" alt="Pinterest">
       </a>
-      <div id="nav-buttons">
-        <a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-user" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-commenting" aria-hidden="true"></i></a>
+      <div class="btn">
+        <button class="btn">Inicio</button>
+      </div>
+      <div class="btnw">
+        <button class="btnw">Hoy</button>
+      </div>
+      <div class="btnw">
+        <button class="btnw">Crear </button>
       </div>
       <div class="finder">
-        <input type="text" placeholder="Buscar">
+        <input type="text" placeholder=" Search">
       </div>
       <div id="navbar-right">
         <div id="notifications">
             <img src="https://cdn-icons-png.flaticon.com/512/60/60753.png" alt="Notificaciones">
-            <div class="dropdown-content">
-            </div>
           </div>
         <div id="message">
             <img src="https://cdn-icons-png.flaticon.com/512/8201/8201443.png" alt="Mensajes">
-            <div class="dropdown-content">
-            </div>
           </div>
           <div id="profile-img">
             <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Perfil">
@@ -54,28 +54,28 @@
         </div>
       </div>
       <div class="card-image">
-        <img src="https://picsum.photos/id/111/200/300" alt="Imagen 3">
+        <img src="imagen3.jpg" alt="Imagen 3">
         <div class="card-buttons">
           <button>Me gusta</button>
           <button>Guardar</button>
         </div>
       </div>
       <div class="card-image">
-        <img src="https://picsum.photos/id/48/200/300" alt="Imagen 4">
+        <img src="imagen4.jpg" alt="Imagen 4">
         <div class="card-buttons">
           <button>Me gusta</button>
           <button>Guardar</button>
         </div>
       </div>
       <div class="card-image">
-        <img src="https://picsum.photos/id/367/1000/1000" alt="Imagen 5">
+        <img src="imagen5.jpg" alt="Imagen 5">
         <div class="card-buttons">
           <button>Me gusta</button>
           <button>Guardar</button>
         </div>
       </div>
       <div class="card-image">
-        <img src="https://picsum.photos/id/984/200/300" alt="Imagen 6">
+        <img src="imagen6.jpg" alt="Imagen 6">
         <div class="card-buttons">
           <button>Me gusta</button>
           <button>Guardar</button>
